Fix top menu dropdown flicker by adding position relative to menu li elements

--- a/assets/stylesheets/additionals.css
+++ b/assets/stylesheets/additionals.css
@@ -248,6 +248,11 @@ div.macro-desc {
   border-bottom: 1px solid #eee;
 }
 
+/* Dropdown menu - li needs position:relative so .menu-children positions correctly */
+#top-menu > ul > li {
+  position: relative;
+}
+
 #top-menu li:hover ul.menu-children,
 #top-menu li ul.menu-children.visible { display: block; }
 
